# llvm-opaque-ptrs-transformer

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md
examples/: CMakeLists.txt  error_handling_example.cpp  transform.cpp
src/: CMakeLists.txt  error_handler.cpp  transformer.cpp
src/include/: error_handler.h  transformer.h
tests/: CMakeLists.txt  test_transformer.cpp
tests/resources/: after_substitution.1.ptx.ll
